# eagle_eye

./: .clangd  .gitignore  CMakeLists.txt  index.html  sync_app.sh
include/: AsyncFaceInference.hpp  DmaBufferPool.hpp  MppEncoder.hpp  RgaProcessor.hpp  WebRtcStreamer.hpp  YoloV8FaceTracker.hpp
src/: AsyncFaceInference.cpp  YoloV8FaceTracker.cpp  main.cpp
